Fixed alignment issues

--- a/client/src/styles/_study-room.scss
+++ b/client/src/styles/_study-room.scss
@@ -54,6 +54,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 1rem;
+    align-items: center;
 
   }
 
